[project]
name = "nixtla-suite-for-time-series-forecasting-with-pyth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hierarchicalforecast>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlforecast>=1.0.31",
    "networkx>=3.6.1",
    "neuralforecast>=3.1.8",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyaf>=5.0",
    "pytest>=9.0.3",
    "pytorch-lightning>=2.5.6",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "statsforecast>=2.0.3",
    "utilsforecast>=0.2.16",
]
